Fri Mar 12 18:52:18 1999  Tom Yu  <tlyu@mit.edu>

	* main.c (main): Fix cleanup code for setluid() failure.

Thu Mar  4 18:46:55 1999  Tom Yu  <tlyu@mit.edu>

	* heuristic.c (get_authorized_princ_names): Fix to not call
	list_union() if cmd is NULL, otherwise freed memory gets
	referenced. [krb5-clients/698]

Thu Feb 18 22:26:30 1999  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (ksu): Add $(KSU_LIBS) in case we need -lsecurity.

	* main.c (main): Add call to setluid() on systems that have it.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* main.c (main): POSIX states that getopt returns -1 when it
		is done parsing options, not EOF.

Wed Feb 18 15:44:15 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
 	BUILDTOP for new conventions.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Wed Feb  4 20:46:49 1998  Tom Yu  <tlyu@mit.edu>

	* krb_auth_su.c (krb5_verify_tkt_def): If using a pre-existing
	credential cache, ensure that the host ticket has not yet
	expired.  Patch from vwelch@ncsa.uiuc.edu [krb5-clients/545].

Mon Jan 27 16:56:07 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Sun Nov 10 20:10:53 1996  Sam Hartman  <hartmans@mit.edu>

	* krb_auth_su.c (path_passwd;): If you don't have a srvtab, always
 	fail.

Thu Nov  7 15:41:19 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* main.c (main): Check the error return from
 		krb5_init_context(), and print an error message if
 		necessary.

Wed Sep 18 15:54:41 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* krb_auth_su.c (krb5_get_tkt_via_passwd): Remove call to
		krb5_os_localaddr(), since get_in_tkt will default correctly.
